# cogsys-io-cookiecutter-pypackage

./: .gitignore  README.rst  cookiecutter.json  requirements_dev.txt  setup.cfg
docs/: conf.py  console_script_setup.rst  index.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  _version.py  cli.py
