[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
description_file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[flake8]
max-complexity = 18
max-line-length = 111
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    {{cookiecutter.project_slug}},
    .tox
